@startuml

title __MODIFIERS's Class Diagram__\n

  package sase.input {
    package sase.input.modifiers {
      class RarestTypeEventStreamModifier {
          {static} - formatter : SimpleDateFormat
          - eventCounter : int
          - rarestEventCounter : int
          - rarestEventTypeFilteringFactor : int
          - rarestEventTypeDuplicatingFactor : int
          - initialReplaceMap : List<EventType>
          - currReplaceMap : List<EventType>
          + RarestTypeEventStreamModifier()
          {static} - createTimestamp()
          - advanceToNextPhase()
          - getEffectiveEventType()
          - shouldFilterEvent()
          - createAndDuplicateActualEvent()
          + produceModifiedEvents()
      }
    }
  }
  

  package sase.input {
    package sase.input.modifiers {
      class TrivialEventStreamModifier {
          + produceModifiedEvents()
      }
    }
  }
  

  package sase.input {
    package sase.input.modifiers {
      class TypeShuffleEventStreamModifier {
          - eventTypeTranslationMap : Map<EventType, EventType>
          - reShufflingPeriod : Integer
          + TypeShuffleEventStreamModifier()
          - reShuffleMap()
          + produceModifiedEvents()
      }
    }
  }
  

  RarestTypeEventStreamModifier -up-|> IEventStreamModifier
  TrivialEventStreamModifier -up-|> IEventStreamModifier
  TypeShuffleEventStreamModifier -up-|> IEventStreamModifier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
